--- a/package.json
+++ b/package.json
@@ -3,9 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "rc-tabs": "^9.6.0",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
-    "react-scripts": "2.1.3"
+    "react-scripts": "2.1.3",
+    "react-tabs": "^3.0.0",
+    "react-vis": "^1.11.6"
   },
   "scripts": {
     "start": "react-scripts start",
