--- a/package.json
+++ b/package.json
@@ -3,12 +3,25 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "chart.js": "^2.7.3",
+    "d3": "^5.7.0",
+    "d3-array": "2.0.3",
+    "d3-axis": "1.0.12",
+    "d3-brush": "1.0.6",
+    "d3-geo": "1.11.3",
+    "d3-scale": "2.2.0",
+    "d3-selection": "1.4.0",
+    "d3-shape": "1.3.3",
+    "d3-svg-legend": "2.25.6",
+    "d3-transition": "1.2.0",
     "rc-tabs": "^9.6.0",
     "react": "^16.7.0",
+    "react-chartjs-2": "^2.7.4",
     "react-dom": "^16.7.0",
     "react-scripts": "2.1.3",
     "react-tabs": "^3.0.0",
-    "react-vis": "^1.11.6"
+    "react-vis": "^1.11.6",
+    "recharts": "^1.4.2"
   },
   "scripts": {
     "start": "react-scripts start",
