--- a/package.json
+++ b/package.json
@@ -15,11 +15,12 @@
     "d3-shape": "1.3.3",
     "d3-svg-legend": "2.25.6",
     "d3-transition": "1.2.0",
+    "formik": "^1.5.1",
     "rc-tabs": "^9.6.0",
     "react": "^16.7.0",
     "react-chartjs-2": "^2.7.4",
     "react-dom": "^16.7.0",
-    "react-scripts": "2.1.3",
+    "react-scripts": "^2.1.5",
     "react-tabs": "^3.0.0",
     "react-vis": "^1.11.6",
     "recharts": "^1.4.2"
