--- a/package.json
+++ b/package.json
@@ -3,8 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@date-io/date-fns": "^1.1.0",
     "@material-ui/core": "^3.9.2",
+    "date-fns": "^2.0.0-alpha.27",
     "formik": "^1.5.1",
+    "material-ui-pickers": "^2.2.1",
+    "object-hash": "^1.3.1",
     "react": "^16.8.3",
     "react-dom": "^16.8.3",
     "react-scripts": "2.1.5",
