--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@date-io/date-fns": "^1.1.0",
     "@material-ui/core": "^3.9.2",
+    "classnames": "^2.2.6",
     "date-fns": "^2.0.0-alpha.27",
     "formik": "^1.5.1",
     "material-ui-pickers": "^2.2.1",
