--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@material-ui/core": "^3.9.2",
     "classnames": "^2.2.6",
     "date-fns": "^2.0.0-alpha.27",
+    "firebase": "^7.0.0",
     "formik": "^1.5.1",
     "material-ui-pickers": "^2.2.1",
     "object-hash": "^1.3.1",
